# vaultwares-mcp

./: .gitignore  .mcpbignore  CLAUDE.md  CRITICAL.md  LICENSE  README.md  TASKS.md  install.sh  manifest.json  pyproject.toml  server.py  vaultwares-mcp-2.0.0.mcpb
skills/: api-design.skill  browser-automation.skill  ci-cd-pipeline.skill  code-generation.skill  code-review.skill  content-writing.skill  credit-analyze-batch.skill  credit-classify.skill  credit-estimate.skill  credit-optimize-prompt.skill  credit-optimizer.skill  credit-recommend.skill  cron-scheduler.skill  csv-processing.skill  data-analysis.skill  debugging.skill  diagram-generation.skill  docker-compose.skill  documentation.skill  email-drafting.skill  environment-setup.skill  fast-navigation.skill  git-workflow.skill  image-processing.skill  json-yaml-transformer.skill  llm-context-hygiene.skill  markdown-formatting.skill  pdf-processing.skill  performance-profiling.skill  prompt-engineering.skill  refactoring.skill  regex-builder.skill  research.skill  security-audit.skill  spreadsheet-formula.skill  sql-query.skill  summarisation.skill  test-generation.skill  translation.skill  web-scraping.skill
tests/: test_import_smoke.py  test_live_server.py  test_tiers.py  test_tools.py
tools/: __init__.py  credit_optimizer.py  fast_navigation.py
vaultwares_fastmcp/: __init__.py  installer.py  limits.py  server.py  usage.py
vaultwares_mcp/: __init__.py  __main__.py  config.py  fs_tools.py  installer.py  ledger_tools.py  ops_tools.py  server.py  shell_tools.py  ssh_tools.py  usage.py  vw_cli_tools.py
