[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vaultwares-fastmcp"
version = "2.0.0"
description = "VaultWares FastMCP server — Credit Optimizer and Fast Navigation skills for Manus AI and other MCP clients"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.3.0",
    "httpx>=0.27.0",
    "selectolax>=0.3.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[project.scripts]
vaultwares-mcp = "vaultwares_fastmcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["tools", "vaultwares_fastmcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
