[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vaultwares-mcp"
version = "3.0.0"
description = "VaultWares MCP server — Credit Optimizer and Fast Navigation skills for AI Assistants and other MCP clients"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.3.0",
    "httpx>=0.27.0",
    "selectolax>=0.3.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[project.scripts]
vaultwares-mcp = "vaultwares_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["tools", "vaultwares_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
